Reorganize WR327 folder.

--- a/wr327/process_description.tex
+++ b/wr327/process_description.tex
@@ -83,7 +83,7 @@ authors may label steps differently, but the process usually remains unchanged.
 \begin{figure}[H]
   \centering
   \caption{Waterfall Design Model Outline.  Steven Zeil \copyright 1998-2008.\label{waterfall}}
-  \includegraphics[width=4in]{waterfall}
+  \includegraphics[width=4in]{process_description_waterfall}
 \end{figure}
 
 Regardless of terminology, the process can be broken down into six steps.
