--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -71,9 +71,9 @@
 \section{Education}
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}r l p{5.5cm} r}
 
-  \degree{Expected June 2015}
+  \degree{Expected December 2014}
   {B.S.}
-  {Computer Science (GPA: 3.88)}
+  {Computer Science (GPA: 3.88 / 4.0)}
   {Oregon State University}
 
 \end{tabular*}
@@ -106,7 +106,7 @@
    front-end.}
 
   \experience{2012---Present}
-  {Programmer}
+  {Team Lead/Programmer}
   {at}
   {\href{http://www.aerialroboticscompetition.org/2013SymposiumPapers/OregonState.pdf}{OSU Aerial Robotics Team}}
   {Worked with other club members to build a fully autonomous quadrotor for
@@ -119,7 +119,7 @@
   {at}
   {\href{http://r2dm.com}{R$^{2}$DM}}
   {Lead a team to build an educational game for Comcast using \skill{Unity3D},
-   \skill{JavaScript}, and \skill{C\#}.  Built instructive animations for comast
+   \skill{JavaScript}, and \skill{C\#}.  Built instructive animations for Comcast
    with \skill{Adobe Flash} and \skill{Adobe Captivate}.  Created interactive
    simulations with \skill{ActionScript} and \skill{Adobe Flash}.}
 
@@ -127,11 +127,9 @@
   {Student}
   {in the}
   {Intel Open Source Learning Company}
-  {Worked in a group of select students looking to go beyond the pre-EECS
-  requirements and solve real world problems. Designed and implemented a project
-  to use a Genetic Algorithm to find optimal physical structure designs.  Worked
-  with \skill{Git}, \skill{C\#}, \skill{HTML5}, \skill{JavaScript}, and
-  \skill{Genetic Algorithms}.}
+  {Designed and implemented a project to use a aenetic algorithm to find optimal
+  physical structure designs.  Worked with \skill{Git}, \skill{C\#},
+  \skill{HTML5}, \skill{JavaScript}, and \skill{genetic algorithms}.}
 
   \experience{2010}
   {Student}
@@ -229,7 +227,7 @@
 
 %%\XeTeXpdffile ''resume.pdf'' page 1 scaled 800
 
-% \vspace{0.2em}
+% \vspace{0.1em}
 % 
 % References available upon request.
 
