--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -127,7 +127,7 @@
   {Student}
   {in the}
   {Intel Open Source Learning Company}
-  {Designed and implemented a project to use a aenetic algorithm to find optimal
+  {Designed and implemented a project to use a genetic algorithm to find optimal
   physical structure designs.  Worked with \skill{Git}, \skill{C\#},
   \skill{HTML5}, \skill{JavaScript}, and \skill{genetic algorithms}.}
 
