Add RDML to resume.

--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -96,6 +96,13 @@
 \vspace{-0.5em}
 \begin{longtable}{@{\extracolsep{\fill}} l | l r}
 
+  \experience{2013--Present}
+  {Research Assistant}
+  {at}
+  {\href{http://research.engr.oregonstate.edu/rdml/}{Robotic Decision Making Laboratory}}
+  {Researching low-cost solutions to cooperative autonomous exploration and
+  mapping tasks with micro-air vehicles.}
+
   \experience{2013}
   {Quality Assurance Engineer}
   {at}
