Update OSUAR section of resume.

--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -103,6 +103,15 @@
   {Researching low-cost solutions to cooperative autonomous exploration and
   mapping tasks with micro-air vehicles.}
 
+  \experience{2013---Present}
+  {Team Lead}
+  {at}
+  {\href{http://groups.engr.oregonstate.edu/osurc/}{OSU Aerial Robotics Team}}
+  {Coordinating team to construct a fully autonomous quadcopter for competition
+  in the International Aerial Robotics Competition.  Working with \skill{Python}
+  and \skill{NumPy/SciPy} to build 3D navigation systems.  Using \skill{C} to
+  program real-time embedded flight controllers.}
+
   \experience{2013}
   {Quality Assurance Engineer}
   {at}
@@ -111,15 +120,6 @@
    Overhauled existing testing stack to use \skill{RSpec}.  Built a web-based
    test runner using \skill{Ruby} and \skill{Sinatra}, with \skill{jQuery} on the
    front-end.}
-
-  \experience{2012---Present}
-  {Team Lead/Programmer}
-  {at}
-  {\href{http://www.aerialroboticscompetition.org/2013SymposiumPapers/OregonState.pdf}{OSU Aerial Robotics Team}}
-  {Worked with other club members to build a fully autonomous quadrotor for
-  competition in the International Aerial Robotics Competition.  Worked with
-  \skill{Python} and \skill{NumPy/SciPy} to build autonomous 3D navigation
-  systems.  Programmed real-time flight control microcontrollers in \skill{C}.}
 
   \experience{2011---2012}
   {Developer}
