Minor resume corrections.

--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -133,7 +133,7 @@
   \experience{2011---2012}
   {Student}
   {in the}
-  {Intel Open Source Learning Company}
+  {\href{http://engineering.oregonstate.edu/ar2011/\#page16}{Intel Open Source Learning Company}}
   {Designed and implemented a project to use a genetic algorithm to find optimal
   physical structure designs.  Worked with \skill{Git}, \skill{C\#},
   \skill{HTML5}, \skill{JavaScript}, and \skill{genetic algorithms}.}
@@ -174,7 +174,8 @@
 
   \proj{fpga\_stereo\_vision}
   {A real-time stereo vision system designed for implementation on a
-  field-programmable gate array.  Written entirely in \skill{C}.}
+  field-programmable gate array.  Written entirely in \skill{C} to be
+  synthesized using high-level synthesis.}
   {github.com/kylc/fpga\_stereo\_vision}
 
 \end{tabularx}
