Add CS325 Assignment 1 report.

--- a/misc/resume/resume.tex
+++ b/misc/resume/resume.tex
@@ -71,9 +71,9 @@
 \section{Education}
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}r l p{5.5cm} r}
 
-  \degree{Expected December 2014}
+  \degree{Expected June 2015}
   {B.S.}
-  {Computer Science (GPA: 3.88 / 4.0)}
+  {Computer Science (GPA: 3.87 / 4.0)}
   {Oregon State University}
 
 \end{tabular*}
@@ -98,14 +98,14 @@
 
   \experience{2013--Present}
   {Research Assistant}
-  {at}
+  {at the}
   {\href{http://research.engr.oregonstate.edu/rdml/}{Robotic Decision Making Laboratory}}
   {Researching low-cost solutions to cooperative autonomous exploration and
   mapping tasks with micro-air vehicles.}
 
   \experience{2013---Present}
   {Team Lead}
-  {at}
+  {of the}
   {\href{http://groups.engr.oregonstate.edu/osurc/}{OSU Aerial Robotics Team}}
   {Coordinating team to construct a fully autonomous quadcopter for competition
   in the International Aerial Robotics Competition.  Working with \skill{Python}
